# RingKV

./: .gitignore  CMakeLists.txt
AeroIO/data/rdb/: dump-1.rdb  dump-2.rdb
AeroIO/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  EventLoop.cc  EventLoop.h  IoRequest.cc  IoRequest.h  PendingWrite.cc  PendingWrite.h  Socket.cc  Socket.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  common.h
AeroIO/net/http/: CMakeLists.txt  HttpContext.cc  HttpContext.h  HttpReqeust.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
config/: server.conf
flatbuffers/: query.fbs  query_generated.h
src/: CMakeLists.txt  CommandHandlers.cc  CommandHandlers.h  common.cc  common.h  config.cc  config.h  dict.cc  dict.h  engine.cc  engine.h  handleHttp.cc  handleHttp.h  jemalloc.cc  jemalloc.h  kvstr.cc  kvstr.h  list.cc  list.h  main.cc  persistloader.cc  persistloader.h  protocolhandler.cc  protocolhandler.h  respresstr.h  robject.cc  robject.h  server.cc  server.h  zset.cc  zset.h
tests/AeroIO/: echoserver  echoserver.cc  httpserver  httpserver.cc
web/ai-chat-archive/: README.md  chat.fbs  metadata.json  package-lock.json  package.json  vite.config.ts
web/ai-chat-archive/src/: App.tsx  index.css
web/ai-chat-archive/src/lib/: mockData.ts
